@@ -41,6 +41,10 @@ python-apt (0.8.5) UNRELEASED; urgency=low
     document this in the RST documentation (Closes: #656288)
   * debian/control:
     - Drop Recommends on python2.6 (Closes: #645970)
+  * python/configuration.cc:
+    - Handle the use of "del" on configuration values. Those are represented
+      by calling the setter with NULL, which we did not handle before, causing
+      a segmentation fault (Closes: #661062)
 
  -- Michael Vogt <mvo@debian.org>  Tue, 17 Apr 2012 14:09:24 +0200
 
